login and dashboard done

--- a/rpcs/src/styles/Login.css
+++ b/rpcs/src/styles/Login.css
@@ -96,7 +96,7 @@
     width: 30px;
     height: 80px;
     background: white;
-    border: 1px solid #ddd;
+    border: 2px solid #afafaf;
     border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
