--- a/rpcs/src/styles/Students.css
+++ b/rpcs/src/styles/Students.css
@@ -16,7 +16,7 @@
 
 .students-header {
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   color: var(--text-primary);
 }
 
@@ -78,6 +78,7 @@
 
 .students-list {
   width: 100%;
+  margin-top: 1rem;
 }
 
 .list-title {
